SERVER-103744 Use database IX lock for renameCollectionWithinDBForApplyOps (#35459)

GitOrigin-RevId: aa1f172f47b177002c6f7b4e95e7f08840884028